# tts2

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  pyproject.toml
backend/src/: config.py  errors.py  logging_config.py  main.py  middleware.py
backend/src/api/: audio.py  generate.py  health.py  providers.py  router.py  schemas.py  settings.py  voices.py
backend/src/jobs/: manager.py  models.py
backend/src/processing/: audio.py  chunker.py  timing.py
backend/src/providers/: amazon_polly.py  base.py  elevenlabs.py  google_tts.py  openai_tts.py  registry.py
backend/tests/: conftest.py  test_config.py  test_edge_cases.py  test_errors.py  test_logging_config.py  test_middleware.py  test_schemas.py
backend/tests/api/: test_audio.py  test_generate.py  test_health.py  test_providers.py  test_settings.py  test_voices.py
backend/tests/jobs/: test_manager.py
backend/tests/processing/: test_audio.py  test_chunker.py  test_timing.py
backend/tests/providers/: test_amazon_polly.py  test_base.py  test_elevenlabs.py  test_google_tts.py  test_openai_tts.py  test_registry.py
docs/: deployment.md
docs/bugs/: 001-chunker-test-max-chars-threshold.md
docs/design/: design-spec.md
docs/mrd/: mrd.md
docs/specs/: 00-architecture-overview.md  01-project-setup.md  02-data-models.md  03-tts-provider-layer.md  04-text-processing.md  05-api-layer.md  06-job-manager.md  07-audio-processing.md  08-frontend-state.md  11-error-handling.md  (+5 more)
frontend/: package-lock.json  package.json  vite.config.ts
(+46 files in other folders)
